--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.field{
+  width: 300px;
+  padding-bottom: 20px;
+}
+
+.pale-green-border{
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
+
+.header{
+  padding: 10px;
+}
